Added Location Search to Trigger LatLng Coordinates Functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,9 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"
     />
+    <noscript> You need to enable Javascript to run this App. </noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&libraries=places"></script>
+ 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
