Implemented LocationPage Functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous"
     />
     <noscript> You need to enable Javascript to run this App. </noscript>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&libraries=places"></script> -->
  
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,11 +33,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+     <!--  <title>React App</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"></div> --> 
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -48,5 +48,77 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
-</html>
+</html> 
+
+
+
+<!-- 
+<!DOCTYPE html>
+<html>
+  <head>
+    
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Directions Service</title>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #floating-panel {
+        position: absolute;
+        top: 10px;
+        left: 25%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
+    </style>
+  </head>
+  <body>
+      <p id ="test">ok  </p>
+    <div id="floating-panel">
+    <b>Start: </b>
+    <select id="start">
+      <option value="Nanyang Technological University, Singapore">NTU</option>
+      <option value="Jurong East, Singapore">Jurong East</option>
+      <option value="Punggol, Singapore">Punggol</option>
+      <option value="Toa Payoh, Singapore">Toa Payoh</option>
+      <option value="Choa Chu Kang, Singapore">Choa Chu Kang</option>
+      <option value="Bugi, Singapore">Bugis</option>
+
+    </select>
+    <b>End: </b>
+    <select id="end">
+        <option value="Nanyang Technological University, Singapore">NTU</option>
+        <option value="Jurong East, Singapore">Jurong East</option>
+        <option value="Punggol, Singapore">Punggol</option>
+        <option value="Toa Payoh, Singapore">Toa Payoh</option>
+        <option value="Choa Chu Kang, Singapore">Choa Chu Kang</option>
+        <option value="Bugis, Singapore">Bugis</option>
+    </select>
+    </div>
+    <div id="map"></div>
+<script>
+</script>
+
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&callback=initMap">
+    </script>
+  
+  </body>
+</html>  -->
